Add rate limit handling for proactive scheduler
- Add RateLimitError exception class with reset time parsing
- Parse 'Limit reached · resets Xam/pm (UTC)' format from Claude CLI
- Handle RateLimitError in ProactiveScheduler.run_cycle()
- Add _notify_rate_limit() to send Telegram notification to master
- Add _notify_rate_limit_resumed() to notify when resuming
- Auto-sleep until rate limit reset time, then resume automatically

--- a/docker-compose-vnext.yml
+++ b/docker-compose-vnext.yml
@@ -81,6 +81,7 @@ services:
       - ./app:/app/app:ro                    # Read-only app code mount
       - ./logs:/app/logs                      # Persistent logs
       - ./data:/app/data                      # Persistent data directory
+      - /usr/bin/claude:/usr/local/bin/claude:ro  # Mount Claude CLI from host
 
     # Health check for container readiness
     healthcheck:
